# Tomo_Shell2026

./: .gitignore  .polyscope.ini  BUGREPORT_2026-07-03_INT16_vss_overflow.md  Group_E3_931902_tomo_cuda_1deg_60deg.run1.npz  PERF_REGRESSION_2026-07-05_correctness_fix.md  README.md  TODO_CUDA_issues_2026-07-04.md  TSE_TomoSh1.py  TSE_TomoSh2.py  TSE_TomoSh3.py  _acro.py  _acro2.py  conda.yaml  imgui.ini  main.py  pyproject.toml  requirements(python3.10).txt  requirements.txt
MeshData/: (1)sphere.ply  (2)hemisphere.ply  (3)manikin.ply  (4)bodice0.ply  (5)bodice0.1.ply  (6)bodice1.ply  (7)bodice5.ply  SK6th_F20_10k_NoFinger.gltf  SK6th_F20_4k_NoFinger.gltf  SK6th_M20_4k_NoFinger.gltf  SK6th_M20_87k_NoFinger.gltf  masha1_2Finger_JumpingDown.gltf  masha1_NoFinger_JumpingDown.gltf  masha1_NoFinger_JumpingDown_rest.gltf  masha1_jumpingDown_rest.gltf
cfms_bodym/: WorkManager.py  __init__.py  bodym_functions.py  robust.py
cfms_meshcut/: __init__.py  cut_batchWorks.py  cut_colors.py  cut_function.py  cut_group.py  cut_laplacian.py  cut_math.py  cut_meshoffset.py  cut_object.py
cfms_tomo/: Tomo_Shell2025.dll.orig_backup  Tomo_Shell2025.exp  Tomo_Shell2025.lib  __init__.py  tomo_dll_interface.py  tomo_io.py  tomo_object.py  tomo_result.py  tomo_slicingOptions.py
cfms_tomo/Tomo_Shell_vc_src/: .gitignore  Activity1.nvact  Tomo_GPU2024.vcxproj  (+13 more)
highfestiva_gltfLoader/: __init__.py  gltf_loader.py  gltf_primitives.py  gltf_rotater.py  hf_manager.py  hf_mesh.py  hf_shader_programs.py  hf_skin_animator.py  hf_textures.py
pics/: camera_settings.md  crop_margins.py  regen_pics.ps1
(+65 files in other folders)
